# Ai-Directed-NPC-Actors

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  deploy.bat  pyproject.toml  requirements.txt  run.bat  setup.bat  test.bat
.github/workflows/: ci.yml
backend/: analytics.py  app.py  cache.py  cloud_logging.py  cloud_storage.py  config.py  database.py  exceptions.py  gemini_service.py  middleware.py  models.py  secret_manager.py  security.py  tts_service.py
backend/routes/: analytics.py  attendees.py  characters.py  scanner.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_cloud_services.py  test_database.py  test_exceptions.py  test_middleware.py  test_models.py  test_security.py
frontend/: actor.html  index.html  scanner.html
frontend/css/: style.css
frontend/js/: actor.js  admin.js  scanner.js
