[project]
name = "npc-actor-system"
version = "1.0.0"
description = "AI-Directed NPC Actors for Augmented Live Action Events"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "NPC Actor System Team"}]
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may use mocks)",
    "security: Security-focused tests",
    "slow: Tests that take longer to run",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/__init__.py",
    "backend/tts_service.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
    "class FirestoreDatabase",
    "from google.cloud",
]
exclude_also = [
    "if settings.use_firestore",
    "if settings.is_production",
]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = ["S101", "S104", "E501"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
